--- a/.nova/Configuration.json
+++ b/.nova/Configuration.json
@@ -1,5 +1,5 @@
 {
   "workspace.art_style" : 1,
-  "workspace.color" : 1,
-  "workspace.name" : "Ada"
+  "workspace.color" : 11,
+  "workspace.name" : "Ada Language"
 }
